--- a/app/src/main/res/layout/activity_edit_employee.xml
+++ b/app/src/main/res/layout/activity_edit_employee.xml
@@ -4,98 +4,112 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mert.becomealegend.EditActivity"
+    tools:context="com.mert.becomealegend.EditEmployeeActivity"
     android:background="@color/colorWhite">
 
     <EditText
-        android:id="@+id/editTextName"
+        android:id="@+id/editTextEmployeeName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
         android:hint="name"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextSurname"
+        android:id="@+id/editTextEmployeeSurname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
         android:hint="surname"
-        android:layout_below="@+id/editTextName"
+        android:layout_below="@+id/editTextEmployeeName"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextEmail"
+        android:id="@+id/editTextEmployeeEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
         android:hint="email"
-        android:layout_below="@+id/editTextSurname"
+        android:layout_below="@+id/editTextEmployeeSurname"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextPhone"
+        android:id="@+id/editTextEmployeePhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
         android:hint="phone"
-        android:layout_below="@+id/editTextEmail"
+        android:layout_below="@+id/editTextEmployeeEmail"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextProfession"
+        android:id="@+id/editTextEmployeeProfession"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
         android:hint="profession"
-        android:layout_below="@+id/editTextPhone"
+        android:layout_below="@+id/editTextEmployeePhone"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextLocation"
+        android:id="@+id/editTextEmployeeLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
         android:hint="location"
-        android:layout_below="@+id/editTextProfession"
+        android:layout_below="@+id/editTextEmployeeProfession"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextDesignation"
+        android:id="@+id/editTextEmployeeAge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="20dp"
         android:inputType="textPersonName"
-        android:hint="designation"
-        android:layout_below="@+id/editTextLocation"
+        android:hint="age"
+        android:layout_below="@+id/editTextEmployeeLocation"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
-
-
 
     <Button
         android:id="@+id/buttonSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="7dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
         android:text="Save"
         android:textAllCaps="false"
-        android:layout_below="@+id/editTextDesignation"
+        android:layout_below="@+id/editTextEmployeeAge"
         android:textColor="@color/colorWhite"
         android:background="@drawable/rounded_button_solid1"/>
 
