--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.mert.becomealegend.SignUpActivity">
+    tools:context="com.mert.becomealegend.LoginActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -37,24 +37,6 @@
             android:paddingRight="15dp">
 
             <EditText
-                android:id="@+id/editTextName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:hint="name"
-                android:inputType="textPersonName"
-                android:paddingBottom="15dp"/>
-
-            <EditText
-                android:id="@+id/editTextSurname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:hint="surname"
-                android:inputType="textPersonName"
-                android:paddingBottom="15dp"/>
-
-            <EditText
                 android:id="@+id/editTextEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -72,12 +54,12 @@
                 android:paddingBottom="15dp"/>
 
             <Button
-                android:id="@+id/buttonSignUp"
+                android:id="@+id/buttonLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="7dp"
-                android:text="Sign Up"
+                android:text="Login"
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:background="@drawable/rounded_button_solid1"/>
@@ -87,12 +69,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="15dp"
-                android:text="Already have an account? Login"
+                android:text="Don't have a account? Sign Up"
                 android:textAlignment="center"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/colorPrimary" />
-
-
 
         </LinearLayout>
 
@@ -102,8 +82,12 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
     </RelativeLayout>
+
+
+
+
 
 </LinearLayout>
