--- a/app/src/main/res/layout/activity_profile_employee.xml
+++ b/app/src/main/res/layout/activity_profile_employee.xml
@@ -2,15 +2,15 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mert.becomealegend.ProfileActivity">
+    tools:context="com.mert.becomealegend.ProfileEmployeeActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/layout">
+        android:id="@+id/layout"
+        android:background="@color/colorWhite">
 
 
         <ImageView
@@ -19,17 +19,14 @@
             android:layout_height="150dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="centerCrop"
-
             android:src="@drawable/nav_menu_header_bg"
             app:srcCompat="@drawable/nav_menu_header_bg" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
-
             android:clickable="true"
             app:civ_border_width="3dp"
             app:civ_border_color="#FFFFFFFF"
-
             android:id="@+id/profile"
             android:layout_width="200dp"
             android:layout_height="200dp"
@@ -52,7 +49,7 @@
 
 
             <ImageView
-                android:id="@+id/edit"
+                android:id="@+id/imageViewEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -64,7 +61,7 @@
                 android:src="@android:drawable/ic_menu_edit" />
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/textViewNameSurname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -75,10 +72,10 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/location"
+                android:id="@+id/textViewLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/designation"
+                android:layout_below="@+id/textViewNameSurname"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:text=""
@@ -86,10 +83,10 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/designation"
+                android:id="@+id/textViewProfession"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/name"
+                android:layout_below="@+id/textViewLocation"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:text=""
@@ -102,10 +99,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/profile_layout"
-            android:background="#fff"
+            android:background="@color/colorWhite"
             android:orientation="vertical"
             android:paddingTop="20dp"
-            android:paddingBottom="20dp"
+            android:paddingBottom="100dp"
             android:paddingRight="5dp"
             android:paddingLeft="5dp"
             >
@@ -113,9 +110,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Birthday:"
+                android:text="Age:"
                 android:textColor="@color/colorTextProfile"
-                android:id="@+id/textViewBirthday"
+                android:id="@+id/textViewAge"
                 android:padding="10dp"
                 android:layout_alignParentLeft="true"/>
 
@@ -127,27 +124,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:padding="10dp"
-                android:id="@+id/textViewShowBirthday"/>
+                android:id="@+id/textViewShowAge"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Profession:"
-                android:textColor="@color/colorTextProfile"
-                android:id="@+id/textViewProfession"
-                android:layout_below="@+id/textViewBirthday"
-                android:padding="10dp"
-                android:layout_alignParentLeft="true"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="@color/colorTextProfile"
-                android:id="@+id/textViewShowProfession"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/textViewShowBirthday"
-                android:padding="10dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -156,7 +134,7 @@
                 android:textColor="@color/colorTextProfile"
                 android:id="@+id/textViewExperience"
                 android:padding="10dp"
-                android:layout_below="@+id/textViewProfession"
+                android:layout_below="@+id/textViewAge"
                 android:layout_alignParentLeft="true"/>
 
             <TextView
@@ -166,7 +144,7 @@
                 android:textColor="@color/colorTextProfile"
                 android:id="@+id/textViewShowExperience"
                 android:layout_alignParentRight="true"
-                android:layout_below="@+id/textViewShowProfession"
+                android:layout_below="@+id/textViewShowAge"
                 android:padding="10dp" />
 
             <TextView
