--- a/app/src/main/res/layout/activity_profile_company.xml
+++ b/app/src/main/res/layout/activity_profile_company.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mert.becomealegend.ProfileCompanyActivity">
+    tools:context="projects.etrkk5.employeer.ProfileCompanyActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,12 +22,25 @@
             android:src="@drawable/nav_menu_header_bg"
             app:srcCompat="@drawable/nav_menu_header_bg" />
 
+        <ImageView
+            android:id="@+id/imageViewSignOut"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="15dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:scaleType="center"
+            android:src="@drawable/signout"
+            app:srcCompat="@drawable/signout" />
+
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:clickable="true"
             app:civ_border_width="3dp"
             app:civ_border_color="#FFFFFFFF"
-            android:id="@+id/profile"
+            android:id="@+id/profilePicture"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_below="@+id/header_cover_image"
@@ -47,6 +60,17 @@
             android:elevation="4dp"
             android:paddingBottom="24dp">
 
+            <ImageView
+                android:id="@+id/imageViewSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:clickable="true"
+                android:src="@android:drawable/ic_menu_search" />
+
 
             <ImageView
                 android:id="@+id/imageViewEdit"
@@ -56,9 +80,18 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
+                android:scaleType="center"
                 android:clickable="true"
-
                 android:src="@android:drawable/ic_menu_edit" />
+
+            <ImageView
+                android:id="@+id/imageViewPostAd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignStart="@+id/imageViewSearch"
+                android:clickable="true"
+                android:src="@drawable/findemployee" />
 
             <TextView
                 android:id="@+id/textViewCompanyName"
@@ -68,7 +101,7 @@
                 android:layout_marginTop="70dp"
                 android:text=""
                 android:textColor="#fff"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
