--- a/app/src/main/res/layout/activity_profile_employee.xml
+++ b/app/src/main/res/layout/activity_profile_employee.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mert.becomealegend.ProfileEmployeeActivity">
+    tools:context="projects.etrkk5.employeer.ProfileEmployeeActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,17 +17,33 @@
             android:id="@+id/header_cover_image"
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="centerCrop"
             android:src="@drawable/nav_menu_header_bg"
             app:srcCompat="@drawable/nav_menu_header_bg" />
+
+        <ImageView
+            android:id="@+id/imageViewSignOut"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="15dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:scaleType="center"
+            android:src="@drawable/signout"
+            app:srcCompat="@drawable/signout" />
+
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:clickable="true"
             app:civ_border_width="3dp"
             app:civ_border_color="#FFFFFFFF"
-            android:id="@+id/profile"
+            android:id="@+id/profilePicture"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_below="@+id/header_cover_image"
@@ -49,6 +65,26 @@
 
 
             <ImageView
+                android:id="@+id/imageViewSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:clickable="true"
+                android:src="@android:drawable/ic_menu_search" />
+
+            <ImageView
+                android:id="@+id/imageViewGetAd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignStart="@+id/imageViewSearch"
+                android:clickable="true"
+                android:src="@drawable/findemployee" />
+
+            <ImageView
                 android:id="@+id/imageViewEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -57,7 +93,6 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:clickable="true"
-
                 android:src="@android:drawable/ic_menu_edit" />
 
             <TextView
@@ -187,6 +222,25 @@
                 android:layout_below="@+id/textViewShowEmail"
                 android:padding="10dp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Skills: "
+                android:textColor="@color/colorTextProfile"
+                android:id="@+id/textViewSkills"
+                android:padding="10dp"
+                android:layout_below="@id/textViewPhone"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/colorTextProfile"
+                android:id="@+id/textViewSkill1"
+                android:padding="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/textViewShowPhone"
+                android:layout_marginLeft="200dp"/>
 
         </RelativeLayout>
     </RelativeLayout>
