--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mert.becomealegend.ChooseActivity"
+    tools:context="projects.etrkk5.employeer.ChooseActivity"
     android:background="@color/colorAccent">
 
     <Button
