--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.mert.becomealegend.LoginActivity">
+    tools:context="projects.etrkk5.employeer.LoginActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
