--- a/app/src/main/res/layout/activity_sign_up_employee.xml
+++ b/app/src/main/res/layout/activity_sign_up_employee.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.mert.becomealegend.SignUpEmployeeActivity">
+    tools:context="projects.etrkk5.employeer.SignUpEmployeeActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
